--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,28 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+# Use a package of configuration called an orb.
 orbs:
-  node: circleci/node@4.7.0
-jobs:
-  build:
-    executor:
-      name: node/default
-      tag: '10.4'
-    steps:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@13.8.0
+jobs:  
+    build: 
+      docker:
+       - image: cimg/node:18.2.0
+      steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-      - run: npm run test
+      - run: echo "A first hello"  
+jobs:  
+    build: 
+      docker:
+       - image: cimg/node:18.2.0
+      steps:
+      - checkout
+      - run: echo "A hello"  
+  
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
