--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,20 +4,20 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@13.8.0
-jobs:  
-    build: 
-      docker:
+jobs: 
+  print_hello:
+    docker:
        - image: cimg/node:18.2.0
-      steps:
+    steps:
       - checkout
       - run: echo "A first hello"  
-jobs:  
-    build: 
+  
+  print_world: 
       docker:
        - image: cimg/node:18.2.0
       steps:
       - checkout
-      - run: echo "A hello"  
+      - run: echo "A hello world"  
   
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -25,4 +25,5 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      - print_hello
+      - print_world
