--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@13.8.0
+  welcome: circleci/welcome-orb@5.0.2
 jobs: 
   print_hello:
     docker:
@@ -26,4 +26,6 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - print_hello
-      - print_world
+      - print_world:
+          requires:
+            - print_hello
