--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
-  node: circleci/node@5.0.2
+  welcome: circleci/welcome-orb@0.4.1
 jobs: 
   print_hello:
     docker:
