--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,22 +4,18 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
-jobs: 
+# Orchestrate or schedule a set of jobs
+jobs:
   print_hello:
     docker:
-       - image: cimg/node:18.2.0
+      - image: circleci/node:13.8.0
     steps:
-      - checkout
-      - run: echo "A first hello"  
-  
-  print_world: 
-      docker:
-       - image: cimg/node:18.2.0
-      steps:
-      - checkout
-      - run: echo "A hello world"  
-  
-# Orchestrate or schedule a set of jobs
+      - run: echo hello
+  print_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo world
 workflows:
   # Name the workflow "welcome"
   welcome:
